{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 751,
  "lineage": "5a5dc360-1bff-d098-ac2d-f5634d1bd441",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-17T08:02:09.619-08:00",
            "deny": [],
            "description": "Creates firewall rule targeting tagged instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/concise-honor-368108/global/firewalls/flask-network-http-allow",
            "log_config": [],
            "name": "flask-network-http-allow",
            "network": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/global/networks/flask-network",
            "priority": 1000,
            "project": "concise-honor-368108",
            "self_link": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/global/firewalls/flask-network-http-allow",
            "source_ranges": [
              "0.0.0.0/0",
              "130.211.0.0/22",
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.flask-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20221102",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/zones/us-east1-b/disks/flask-public-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/concise-honor-368108/zones/us-east1-b/instances/flask-public-vm",
            "instance_id": "5627349352215995890",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "HWJORwhFaPg=",
            "name": "flask-public-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.138.91.141",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/global/networks/flask-network",
                "network_ip": "10.0.1.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/regions/us-east1/subnetworks/public-flask-subnet",
                "subnetwork_project": "concise-honor-368108"
              }
            ],
            "project": "concise-honor-368108",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/zones/us-east1-b/instances/flask-public-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "PhZSlEh1qrg=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.flask-network",
            "google_compute_subnetwork.flask-subnetwork-public"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "flask-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/concise-honor-368108/global/networks/flask-network",
            "mtu": 0,
            "name": "flask-network",
            "project": "concise-honor-368108",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/global/networks/flask-network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-17T08:02:09.809-08:00",
            "id": "projects/concise-honor-368108/regions/us-east1/routers/flask-network-router",
            "name": "flask-network-router",
            "network": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/global/networks/flask-network",
            "project": "concise-honor-368108",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/regions/us-east1/routers/flask-network-router"
          },
          "dependencies": [
            "google_compute_network.flask-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "concise-honor-368108/us-east1/flask-network-router/flask-network-nat",
            "min_ports_per_vm": 0,
            "name": "flask-network-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "concise-honor-368108",
            "region": "us-east1",
            "router": "flask-network-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "projects/concise-honor-368108/regions/us-east1/subnetworks/private-flask-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.flask-network",
            "google_compute_router.default",
            "google_compute_subnetwork.flask-subnetwork-private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "flask-subnetwork-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-17T08:02:09.914-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/concise-honor-368108/regions/us-east1/subnetworks/private-flask-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "private-flask-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/global/networks/flask-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "concise-honor-368108",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/regions/us-east1/subnetworks/private-flask-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.flask-network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "flask-subnetwork-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-17T08:02:10.917-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/concise-honor-368108/regions/us-east1/subnetworks/public-flask-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public-flask-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/global/networks/flask-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "concise-honor-368108",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/regions/us-east1/subnetworks/public-flask-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.flask-network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/regions/us-east1/instanceGroups/flask-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-11-17T08:03:26.021-08:00",
            "enable_cdn": false,
            "fingerprint": "OoaogolZva4=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/global/healthChecks/flask-hc-default"
            ],
            "id": "projects/concise-honor-368108/global/backendServices/flask-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "flask-backend-default",
            "port_name": "http",
            "project": "concise-honor-368108",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/global/backendServices/flask-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_network.flask-network",
            "google_compute_subnetwork.flask-subnetwork-private",
            "google_service_account.service_account",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.autohealing",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig_template.google_compute_instance_template.tpl"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-17T08:03:13.609-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/concise-honor-368108/global/firewalls/flask-hc-0",
            "log_config": [],
            "name": "flask-hc-0",
            "network": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/global/networks/flask-network",
            "priority": 1000,
            "project": "concise-honor-368108",
            "self_link": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/global/firewalls/flask-hc-0",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "flask-network-router",
              "private-flask-subnet"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.flask-network",
            "google_compute_router.default",
            "google_compute_subnetwork.flask-subnetwork-private",
            "google_service_account.service_account",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.autohealing",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig_template.google_compute_instance_template.tpl"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.110.144.213",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-11-17T08:01:57.633-08:00",
            "id": "projects/concise-honor-368108/global/addresses/flask-address",
            "name": "flask-address",
            "prefix_length": 0,
            "project": "concise-honor-368108",
            "self_link": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/global/addresses/flask-address"
          }
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/concise-honor-368108/global/forwardingRules/flask",
            "ip_address": "34.110.144.213",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "flask",
            "port_range": "80",
            "project": "concise-honor-368108",
            "self_link": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/global/forwardingRules/flask",
            "target": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/global/targetHttpProxies/flask-http-proxy"
          },
          "dependencies": [
            "google_compute_network.flask-network",
            "google_compute_subnetwork.flask-subnetwork-private",
            "google_service_account.service_account",
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_global_address.default",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.gce-lb-http.google_compute_target_http_proxy.default",
            "module.gce-lb-http.google_compute_url_map.default",
            "module.gce-lb-http.google_compute_url_map.https_redirect",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.autohealing",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig_template.google_compute_instance_template.tpl"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-17T08:04:01.301-08:00",
            "id": "projects/concise-honor-368108/global/targetHttpProxies/flask-http-proxy",
            "name": "flask-http-proxy",
            "project": "concise-honor-368108",
            "proxy_bind": false,
            "proxy_id": 1459200225579885982,
            "self_link": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/global/targetHttpProxies/flask-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/global/urlMaps/flask-url-map"
          },
          "dependencies": [
            "google_compute_network.flask-network",
            "google_compute_subnetwork.flask-subnetwork-private",
            "google_service_account.service_account",
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.gce-lb-http.google_compute_url_map.default",
            "module.gce-lb-http.google_compute_url_map.https_redirect",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.autohealing",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig_template.google_compute_instance_template.tpl"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-17T08:03:49.430-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/global/backendServices/flask-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "mNOOOHWuadw=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/concise-honor-368108/global/urlMaps/flask-url-map",
            "map_id": 1940180818351351178,
            "name": "flask-url-map",
            "path_matcher": [],
            "project": "concise-honor-368108",
            "self_link": "https://www.googleapis.com/compute/v1/projects/concise-honor-368108/global/urlMaps/flask-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.flask-network",
            "google_compute_subnetwork.flask-subnetwork-private",
            "google_service_account.service_account",
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.autohealing",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig_template.google_compute_instance_template.tpl"
          ]
        }
      ]
    }
  ]
}